# time-tracker

./: Dockerfile  README.md  fly.toml  pyproject.toml
.claude/commands/: prompt.md
app/: auth.py  database.py  main.py  models.py  routes.py  schemas.py
static/: index.html
